auth and router

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,67 @@
 {
   "@@locale": "ar",
-  "hello": "مرحبا",
-  "welcome": "أهلاً بك!"
+  "hello": "مرحبًا",
+  "welcome": "أهلًا بك!",
+
+  "loginTitle": "مرحبًا بعودتك!",
+  "loginSubtitle": "سجّل الدخول لمتابعة المحادثة مع أصدقائك.",
+  "emailLabel": "البريد الإلكتروني",
+  "emailHint": "أدخل بريدك الإلكتروني",
+  "passwordLabel": "كلمة المرور",
+  "passwordHint": "أدخل كلمة المرور",
+  "forgotPassword": "نسيت كلمة المرور؟",
+  "loginButton": "تسجيل الدخول",
+
+  "signupTitle": "إنشاء حساب",
+  "signupSubtitle": "أدخل بياناتك للبدء",
+  "nameHint": "الاسم",
+  "signupButton": "إنشاء حساب",
+
+  "toastErrorDefault": "حدث خطأ غير متوقع",
+
+  "registerTitle": "انضم إلى المحادثة",
+  "registerSubtitle": "أنشئ حسابًا وابدأ الدردشة فورًا.",
+  "nameLabel": "الاسم الكامل",
+  "nameHint": "أدخل اسمك الكامل",
+  "registerEmailLabel": "البريد الإلكتروني",
+  "registerEmailHint": "أدخل بريدك الإلكتروني",
+  "registerPasswordLabel": "كلمة المرور",
+  "registerPasswordHint": "أنشئ كلمة مرور",
+  "confirmPasswordLabel": "تأكيد كلمة المرور",
+  "confirmPasswordHint": "أعد إدخال كلمة المرور",
+  "registerButton": "إنشاء حساب",
+
+  "otpTitle": "تحقق من رقمك",
+  "otpSubtitle": "أرسلنا رمزًا مكوّنًا من 6 أرقام لتأكيد هويتك.",
+  "otpLabel": "رمز التحقق",
+  "otpHint": "أدخل الرمز المكوّن من 6 أرقام",
+  "resendCode": "إعادة إرسال الرمز",
+  "verifyButton": "تحقق",
+
+  "authInvalidEmail": "البريد الإلكتروني غير صالح.",
+  "authUserDisabled": "تم تعطيل هذا المستخدم.",
+  "authUserNotFound": "لا يوجد مستخدم بهذا البريد الإلكتروني.",
+  "authWrongPassword": "كلمة المرور غير صحيحة.",
+  "authEmailAlreadyInUse": "البريد الإلكتروني مستخدم بالفعل.",
+  "authOperationNotAllowed": "هذا النوع من تسجيل الدخول غير مفعل.",
+  "authWeakPassword": "كلمة المرور ضعيفة جدًا.",
+  "authNetworkRequestFailed": "فشل الاتصال بالإنترنت.",
+  "authTooManyRequests": "عدد كبير من المحاولات. يرجى المحاولة لاحقًا.",
+  "authUnknown": "حدث خطأ غير متوقع.",
+  "authInvalidCredential": "مدخلات غير صحيحة حاول مجددا",
+
+  "authSignUpSuccess": "تم التسجيل بنجاح",
+  "authSignUpFailed": "حدث خطأ أثناء التسجيل",
+  "authSignInSuccess": "تم تسجيل الدخول بنجاح",
+  "authSignInFailed": "فشل تسجيل الدخول",
+  "authSignInGoogleSuccess": "تم تسجيل الدخول باستخدام Google",
+  "authSignInGoogleFailed": "فشل تسجيل الدخول بـ Google",
+  "authSignInFacebookSuccess": "تم تسجيل الدخول باستخدام Facebook",
+  "authSignInFacebookFailed": "فشل تسجيل الدخول بـ Facebook",
+  "authSignOutSuccess": "تم تسجيل الخروج",
+  "authSignOutFailed": "فشل تسجيل الخروج",
+  "authResetPasswordSent": "تم إرسال رابط إعادة تعيين كلمة المرور",
+  "authResetPasswordFailed": "فشل في إعادة تعيين كلمة المرور",
+  "authEmptyFieldsError": "برجاء مليء جميع الخانات"
+
 }
