--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,64 @@
 {
   "@@locale": "en",
   "hello": "Hello",
-  "welcome": "Welcome!"
+  "welcome": "Welcome!",
+
+  "loginTitle": "Welcome Back!",
+  "loginSubtitle": "Sign in to continue chatting with your people.",
+  "emailLabel": "Email Address",
+  "emailHint": "Enter your email",
+  "passwordLabel": "Password",
+  "passwordHint": "Enter your password",
+  "forgotPassword": "Forgot your password?",
+  "loginButton": "Log In",
+
+  "signUpTitle": "Create Account",
+  "signUpSubtitle": "Please fill in the details below to sign up",
+  "nameHint": "Name",
+  "signUpButton": "Sign Up",
+
+  "registerTitle": "Join the Conversation",
+  "registerSubtitle": "Create an account to start chatting instantly.",
+  "nameLabel": "Full Name",
+  "nameHint": "Enter your full name",
+  "registerEmailLabel": "Email Address",
+  "registerEmailHint": "Enter your email",
+  "registerPasswordLabel": "Password",
+  "registerPasswordHint": "Create a password",
+  "confirmPasswordLabel": "Confirm Password",
+  "confirmPasswordHint": "Re-enter your password",
+  "registerButton": "Sign Up",
+
+  "otpTitle": "Verify Your Number",
+  "otpSubtitle": "We’ve sent you a 6-digit code to confirm your identity.",
+  "otpLabel": "Verification Code",
+  "otpHint": "Enter the 6-digit code",
+  "resendCode": "Resend Code",
+  "verifyButton": "Verify",
+
+  "authInvalidEmail": "The email address is not valid.",
+  "authUserDisabled": "This user has been disabled.",
+  "authUserNotFound": "No user found with this email.",
+  "authWrongPassword": "Incorrect password.",
+  "authEmailAlreadyInUse": "Email is already in use.",
+  "authOperationNotAllowed": "Operation not allowed.",
+  "authWeakPassword": "The password is too weak.",
+  "authNetworkRequestFailed": "Network connection failed.",
+  "authTooManyRequests": "Too many attempts. Please try again later.",
+  "authUnknown": "An unknown error occurred.",
+  "authInvalidCredential": "Invalid credentials. Please try again.",
+
+   "authSignUpSuccess": "Sign up successful",
+  "authSignUpFailed": "An error occurred during sign up",
+  "authSignInSuccess": "Sign in successful",
+  "authSignInFailed": "Failed to sign in",
+  "authSignInGoogleSuccess": "Signed in with Google successfully",
+  "authSignInGoogleFailed": "Failed to sign in with Google",
+  "authSignInFacebookSuccess": "Signed in with Facebook successfully",
+  "authSignInFacebookFailed": "Failed to sign in with Facebook",
+  "authSignOutSuccess": "Signed out successfully",
+  "authSignOutFailed": "Failed to sign out",
+  "authResetPasswordSent": "Password reset link sent",
+  "authResetPasswordFailed": "Failed to reset password",
+  "authEmptyFieldsError": "Please fill all fields"
 }
