sign in and sign up handling logic and translation

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,70 +1,71 @@
 {
-  "@@locale": "ar",
-  "hello": "مرحبًا",
-  "welcome": "أهلًا بك!",
+"@@locale": "ar",
+"hello": "مرحبًا",
+"welcome": "أهلاً وسهلاً!",
 
-  "loginTitle": "مرحبًا بعودتك!",
-  "loginSubtitle": "سجّل الدخول لمتابعة المحادثة مع أصدقائك.",
-  "emailLabel": "البريد الإلكتروني",
-  "emailHint": "أدخل بريدك الإلكتروني",
-  "passwordLabel": "كلمة المرور",
-  "passwordHint": "أدخل كلمة المرور",
-  "forgotPassword": "نسيت كلمة المرور؟",
-  "loginButton": "تسجيل الدخول",
+"loginTitle": "مرحبًا بعودتك!",
+"loginSubtitle": "سجل الدخول لمواصلة الدردشة مع أصدقائك.",
+"emailLabel": "البريد الإلكتروني",
+"emailHint": "أدخل بريدك الإلكتروني",
+"passwordLabel": "كلمة المرور",
+"passwordHint": "أدخل كلمة المرور",
+"forgotPassword": "هل نسيت كلمة المرور؟",
+"loginButton": "تسجيل الدخول",
 
-  "signupTitle": "إنشاء حساب",
-  "signupSubtitle": "أدخل بياناتك للبدء",
-  "nameHint": "الاسم",
-  "signupButton": "إنشاء حساب",
+"signUpTitle": "إنشاء حساب",
+"signUpSubtitle": "يرجى ملء التفاصيل أدناه للتسجيل",
+"nameHint": "الاسم",
+"signUpButton": "تسجيل",
 
-  "toastErrorDefault": "حدث خطأ غير متوقع",
+"registerTitle": "انضم إلى المحادثة",
+"registerSubtitle": "أنشئ حسابًا لبدء الدردشة فورًا.",
+"nameLabel": "الاسم الكامل",
+"nameHint": "أدخل اسمك الكامل",
+"registerEmailLabel": "البريد الإلكتروني",
+"registerEmailHint": "أدخل بريدك الإلكتروني",
+"registerPasswordLabel": "كلمة المرور",
+"registerPasswordHint": "أنشئ كلمة مرور",
+"confirmPasswordLabel": "تأكيد كلمة المرور",
+"confirmPasswordHint": "أعد إدخال كلمة المرور",
+"registerButton": "تسجيل",
 
-  "registerTitle": "انضم إلى المحادثة",
-  "registerSubtitle": "أنشئ حسابًا وابدأ الدردشة فورًا.",
-  "nameLabel": "الاسم الكامل",
-  "nameHint": "أدخل اسمك الكامل",
-  "registerEmailLabel": "البريد الإلكتروني",
-  "registerEmailHint": "أدخل بريدك الإلكتروني",
-  "registerPasswordLabel": "كلمة المرور",
-  "registerPasswordHint": "أنشئ كلمة مرور",
-  "confirmPasswordLabel": "تأكيد كلمة المرور",
-  "confirmPasswordHint": "أعد إدخال كلمة المرور",
-  "registerButton": "إنشاء حساب",
+"otpTitle": "تحقق من رقمك",
+"otpSubtitle": "لقد أرسلنا لك رمزًا مكونًا من 6 أرقام لتأكيد هويتك.",
+"otpLabel": "رمز التحقق",
+"otpHint": "أدخل الرمز المكون من 6 أرقام",
+"resendCode": "إعادة إرسال الرمز",
+"verifyButton": "تحقق",
 
-  "otpTitle": "تحقق من رقمك",
-  "otpSubtitle": "أرسلنا رمزًا مكوّنًا من 6 أرقام لتأكيد هويتك.",
-  "otpLabel": "رمز التحقق",
-  "otpHint": "أدخل الرمز المكوّن من 6 أرقام",
-  "resendCode": "إعادة إرسال الرمز",
-  "verifyButton": "تحقق",
+"authInvalidEmail": "عنوان البريد الإلكتروني غير صالح.",
+"authUserDisabled": "تم تعطيل هذا المستخدم.",
+"authUserNotFound": "لا يوجد مستخدم بهذا البريد الإلكتروني.",
+"authWrongPassword": "كلمة المرور غير صحيحة.",
+"authEmailAlreadyInUse": "البريد الإلكتروني مستخدم بالفعل.",
+"authOperationNotAllowed": "العملية غير مسموح بها.",
+"authWeakPassword": "كلمة المرور ضعيفة جدًا.",
+"authNetworkRequestFailed": "فشل الاتصال بالشبكة.",
+"authTooManyRequests": "محاولات كثيرة جدًا. يرجى المحاولة لاحقًا.",
+"authUnknown": "حدث خطأ غير معروف.",
+"authInvalidCredential": "بيانات الاعتماد غير صالحة. يرجى المحاولة مرة أخرى.",
 
-  "authInvalidEmail": "البريد الإلكتروني غير صالح.",
-  "authUserDisabled": "تم تعطيل هذا المستخدم.",
-  "authUserNotFound": "لا يوجد مستخدم بهذا البريد الإلكتروني.",
-  "authWrongPassword": "كلمة المرور غير صحيحة.",
-  "authEmailAlreadyInUse": "البريد الإلكتروني مستخدم بالفعل.",
-  "authOperationNotAllowed": "هذا النوع من تسجيل الدخول غير مفعل.",
-  "authWeakPassword": "كلمة المرور ضعيفة جدًا.",
-  "authNetworkRequestFailed": "فشل الاتصال بالإنترنت.",
-  "authTooManyRequests": "عدد كبير من المحاولات. يرجى المحاولة لاحقًا.",
-  "authUnknown": "حدث خطأ غير متوقع.",
-  "authInvalidCredential": "مدخلات غير صحيحة حاول مجددا",
+"authSignUpSuccess": "تم التسجيل بنجاح",
+"authSignUpFailed": "حدث خطأ أثناء التسجيل",
+"authSignInSuccess": "تم تسجيل الدخول بنجاح",
+"authSignInFailed": "فشل تسجيل الدخول",
+"authSignInGoogleSuccess": "تم تسجيل الدخول باستخدام Google بنجاح",
+"authSignInGoogleFailed": "فشل تسجيل الدخول باستخدام Google",
+"authSignInFacebookSuccess": "تم تسجيل الدخول باستخدام Facebook بنجاح",
+"authSignInFacebookFailed": "فشل تسجيل الدخول باستخدام Facebook",
+"authSignOutSuccess": "تم تسجيل الخروج بنجاح",
+"authSignOutFailed": "فشل تسجيل الخروج",
+"authResetPasswordSent": "تم إرسال رابط إعادة تعيين كلمة المرور",
+"authResetPasswordFailed": "فشل إعادة تعيين كلمة المرور",
+"authEmptyFieldsError": "يرجى ملء جميع الحقول",
+"haveAccount": "هل لديك حساب بالفعل؟",
+"dontHaveAccount": "ليس لديك حساب؟",
 
-  "authSignUpSuccess": "تم التسجيل بنجاح",
-  "authSignUpFailed": "حدث خطأ أثناء التسجيل",
-  "authSignInSuccess": "تم تسجيل الدخول بنجاح",
-  "authSignInFailed": "فشل تسجيل الدخول",
-  "authSignInGoogleSuccess": "تم تسجيل الدخول باستخدام Google",
-  "authSignInGoogleFailed": "فشل تسجيل الدخول بـ Google",
-  "authSignInFacebookSuccess": "تم تسجيل الدخول باستخدام Facebook",
-  "authSignInFacebookFailed": "فشل تسجيل الدخول بـ Facebook",
-  "authSignOutSuccess": "تم تسجيل الخروج",
-  "authSignOutFailed": "فشل تسجيل الخروج",
-  "authResetPasswordSent": "تم إرسال رابط إعادة تعيين كلمة المرور",
-  "authResetPasswordFailed": "فشل في إعادة تعيين كلمة المرور",
-  "authEmptyFieldsError": "برجاء مليء جميع الخانات",
+"chooseLanguage": "اختر اللغة",
+"users": "المستخدمون",
 
-   "chooseLanguage": "اختر اللغة",
-   "users": "المستخدمين"
-
+"chatHint": "أدخل رسالتك"
 }
